--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,20 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>MentorSHIPFRONTEND</title>
+    <title>Ahoy, Mateys!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
+    
     <link rel="stylesheet" href="assets/mentor-ship-frontend.css">
 
     {{content-for "head-footer"}}
   </head>
   <body>
+
     {{content-for "body"}}
 
     <script src="assets/vendor.js"></script>
