--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="icon" href="/assets/favicon.ico">
     <title>Ahoy, Mateys!</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,7 +11,7 @@
     {{content-for "head"}}
 
     <link rel="stylesheet" href="assets/vendor.css">
-    
+
     <link rel="stylesheet" href="assets/mentor-ship-frontend.css">
 
     {{content-for "head-footer"}}
